# scaledb-interfaces

./: CMakeLists.txt  README.md
cmake/: install.cmake  scaledb.cmake
interface/mysql/impl/: ha_scaledb.cpp  mysql_foreign_key.cpp
interface/mysql/incl/: ha_scaledb.h  mysql_foreign_key.h
interface/scaledb/incl/: SdbCommon.h  SdbStorageAPI.h
